--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 <body>
     <script>
 
+        function computerPlay () {
+            let rand = Math.floor(Math.random() * 100);
+
+            if (rand >= 0 && rand < 33) {
+                console.log("Rock");
+            } else if (rand >= 33 && rand < 66) {
+                console.log("Paper");
+            } else {
+                console.log("Scissors");
+            }
+        }
+
     </script>
 </body>
 </html>
