renamed playGame() to playRound() for clarity

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             }
         }
 
-        function playGame (playerSelection, computerSelection) {
+        function playRound (playerSelection, computerSelection) {
             if (playerSelection.toUpperCase() == "ROCK" && computerSelection.toUpperCase() == "PAPER") {
                 console.log("You Lose! Paper beats Rock");
             } else if (playerSelection.toUpperCase() == "ROCK" && computerSelection.toUpperCase() == "SCISSORS") {
