added missing score display for ties

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
                 } else if (roundResult.includes("You Lose")) {
                     compScore++;
                     console.log(playerScore + " Player - " + compScore + " Computer");
+                } else {
+                    console.log(playerScore + " Player - " + compScore + " Computer");
                 }
             }
 
